# mafiasi_link_shortener

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  kustomization.yml  manage.py  pyproject.toml
.github/workflows/: check_pre_commit.yml  deploy.yml  main.yml
api/: serializers.py  urls.py  views.py
api/templates/: swagger.html
docker/: entrypoint.sh
k8s/: deployment.yml  service.yml
links/: models.py  urls.py
links/migrations/: 0001_initial.py  0002_link_owner.py
mafiasi_link_shortener/: asgi.py  settings.py  urls.py
src/: .env.dev  conftest.py  manage.py
src/api/: serializers.py  tests.py  urls.py  views.py
src/links/: admin.py  models.py  urls.py  views.py
src/links/migrations/: 0001_initial.py  0002_link_owner.py
src/mafiasi_link_shortener/: asgi.py  settings.py  urls.py  wsgi.py
src/mafiasi_link_shortener/api/: apps.py  serializers.py  tests.py  urls.py  views.py
src/mafiasi_link_shortener/api/tests/: test_permissions.py  test_serialization.py
src/mafiasi_link_shortener/frontend/: apps.py  urls.py  views.py
src/mafiasi_link_shortener/frontend/link_shortener_gui/: app.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml
src/mafiasi_link_shortener/frontend/mafiasi_link_shortener/: .env  .env.development  README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
src/mafiasi_link_shortener/links/: admin.py  apps.py  models.py  urls.py  user_mapping.py  views.py
src/mafiasi_link_shortener/links/tests/: test_models.py  (+1 more)
src/mafiasi_link_shortener/root_static/: robots.txt
(+40 files in other folders)
